Fix naming config

--- a/inner_directory/blueprint/src/web.tex
+++ b/inner_directory/blueprint/src/web.tex
@@ -14,9 +14,9 @@
 \input{macros/common}
 \input{macros/web}
 
-\home{https://jcreedcmu.github.io/blueprint-test}
-\github{https://github.com/jcreedcmu/blueprint-test}
-\dochome{https://jcreedcmu.github.io/blueprint-test/docs}
+\home{https://jcreedcmu.github.io/blueprint-debug}
+\github{https://github.com/jcreedcmu/blueprint-debug}
+\dochome{https://jcreedcmu.github.io/blueprint-debug/docs}
 
 \title{Blueprint Debug}
 \author{Jason Reed}
